# c4h_intent_system

./: .gitignore  Coder_Design_241130.md  Intent_Architecture_20241105.md  Makefile  README.md  Semantic_Agent_Design_Principles_20241131.md  Semantic_Iterator_Design.md  asset_manager_test.yml  c4h_config.yml  coder_config.yml  coder_config01.yml  coder_config04.yml  coder_design_20241117.md  fix_imports.py  iter_config.yml  iter_config_01.yml  iter_config_02.yml  main_old.py  merge_ai_code.sh  merge_test.yml  migrate.py  migrate_in_place.py  mvp_usecase.md  output.txt  project.toml  pyproject.toml  pytest.ini  refactor_config_00.yml  requirements.txt  run_cli.py  self_refactor_01.yml  semantic_iterator.py.working  semantic_operators_design_2711.md  setup.py  solution_designer_test.yml  test_sample.py  validate_imports.py
backup_txt/: c4h_intent_001.txt  c4h_intent_002.txt  c4h_intent_003.txt
coder4h/: pyproject.toml  setup.py
coder4h/coder4h/: __init__.py  cli.py  main.py
coder4h/coder4h/agents/: assurance.py  base.py  coder.py  discovery.py  intent_agent.py  solution_designer.py
coder4h/coder4h/skills/: semantic_iterator.py
config/: system_config.yml
old_setup/: refactor_script_01.sh  setup_semantic_skills.py
src/: SemanticIterator_Design_241130.md  __init__.py  __main__.py  app.py  cli.py  coder4h.py  config.py  main.py  orchestrator.py  sem_iter.py  testharness.py
test/: source.py
tests/: conftest.py  test_agent_comparison.py  test_agents.py  test_anthropic_key.py  test_assurance.py  test_base_agent.py  test_coder.py  test_discovery.py  (+14 more)
(+66 files in other folders)
